# ogl

./: README.md
c++/: classes.org
c++/doc/: classes.org  elements_of_an_opengl_program.org
c++/glf/: main.cpp
c++/include/: shader_utils.hpp
c++/lib/: attribute.cpp  shader_utils.cpp
c++/most-illustrious-of-cubes/: .depend  Makefile.real  README  mioc.cpp  most-illustrious-of-cubes  shader_utils.cpp  vs.glsl
c++/most-illustrious-of-cubes/.deps/: mioc.P  shader_utils.P
c++/shaders/: fs.glsl
c++/tutorials/continuous-tutorial/: .depend  .emacs.desktop  CMakeCache.txt  CMakeLists.txt  Makefile  attribute.hpp  buffer.hpp  buffer.tpp  cmake_install.cmake  context.cpp  context.hpp  main  main.cpp  make_unique.tpp  matrix.cpp  matrix.hpp  matrix.tpp  matrix1.tpp  oglmath.hpp  scratch  scratch.cpp  scratch.hpp  shader.cpp  shader.fs  shader.hpp  shader.tpp  shader.vs  shaderprogram.cpp  shaderprogram.hpp  shaderprogram.tpp  uniform.cpp  uniform.hpp  uniform.tpp  vector.hpp  vector.old.hpp  vector.tpp
c++/tutorials/ogldev-source/tutorial02/: tutorial02.cpp
cl/: hello.lisp  hello2.lisp  hello3.lisp  hello4.lisp  hello5.lisp  load-hack.lisp  main.lisp  package.lisp  shader-utils.lisp  vs.glsl
cl/walkerlisp/: lisp.lisp
